# RISCOS5

./: README.md
CVSROOT/: Access  commitinfo  commitscript  config  cryptpasswd  cvswrappers  library_log_entry  loginfo  modules  rcsinfo  template_log_entry  writers
Products/BCM2835/: modules
Products/BCM2835Dev/: modules
Products/BCM2835Pico/: modules
Products/Batch1to6Dev/: modules
Products/BonusBinDev/: modules
Products/BuildHost/: modules
Products/BuildHostDev/: modules
Products/CTools/: modules
Products/Disc/: modules
Products/DiscDev/: modules
Products/IOMDHAL/: modules
Products/IOMDHALDev/: modules
Products/OMAP3/: modules
Products/OMAP3Dev/: modules
Products/OMAP4/: modules
Products/OMAP4Dev/: modules
Products/OMAP5Dev/: modules
Products/PlingSystem/: modules
Products/S3CDev/: modules
Products/Titanium/: modules
Products/TitaniumDev/: modules
Products/Tungsten/: modules
Products/TungstenDev/: modules
Products/iMx6/: modules
Products/iMx6Dev/: modules
Test/: BASICtest,ffb
apache/RiscOS/Apps/Makefile/: Makefile
apache/RiscOS/BuildSys/: ModuleDB
apache/RiscOS/Sources/Apps/Browse/: !MkClean,fd7  !MkClnAll,fd7  !ReadMe  Makefile  VersionNum
apache/RiscOS/Sources/Apps/CDPlayer/: !MkInstall,fd7  Makefile  VersionNum
apache/RiscOS/Sources/Apps/CloseUp/: Makefile  VersionNum
apache/RiscOS/Sources/Apps/FontEd/: !MkClean,fd7  !MkInstall,fd7  Makefile  VersionNum
apache/RiscOS/Sources/Apps/FormEd/: !MkInstall,fd7  Makefile  VersionNum
apache/RiscOS/Sources/Apps/Help/: Makefile  VersionASM  VersionNum
apache/RiscOS/Sources/Apps/Maestro/: !MkClean,fd7  !MkInstEx,fd7  !MkInstall,fd7  Makefile  VersionNum
apache/RiscOS/Sources/Apps/MakeModes/: !MkClean,fd7  Makefile  VersionNum
apache/RiscOS/Sources/Apps/Sampler/: Makefile  MkClean,fd7  VersionNum
apache/RiscOS/Sources/Apps/SciCalc/: Makefile  VersionNum
apache/RiscOS/Sources/Apps/Squash/: Makefile  VersionNum
apache/RiscOS/Sources/Apps/SrcEdit/: !Mk,fd7  !MkClean,fd7  !MkInstall,fd7  Makefile  VersionNum
apache/RiscOS/Sources/Apps/TTXTViewer/: !MkCopy,fd7  !MkInstSTB,fd7  !MkInstall,fd7  !MkRebuild,fd7  Makefile  VersionNum
apache/RiscOS/Sources/Apps/WebServe/: Makefile  VersionNum
apache/RiscOS/Sources/Desktop/Clipboard/: Log  Makefile  MkClean,fd7  MkExport,fd7  MkRam,fd7  MkRom,fd7  VersionASM  VersionNum
apache/RiscOS/Sources/Desktop/RedrawMgr/: Makefile  VersionASM  VersionNum
apache/RiscOS/Sources/HAL/HALTester/: !ReadMe  Makefile  MkClean,fd7  MkRom,fd7  VersionASM  VersionNum
apache/RiscOS/Sources/HAL/OMAP3/: Makefile  MkRom,fd7  VersionNum
apache/RiscOS/Sources/HAL/OMAP4/: Makefile  MkRom,fd7  VersionNum
apache/RiscOS/Sources/HAL/PsionNB2/: Makefile  MkRom,fd7  MkRomInst,fd7  VersionASM  VersionNum
apache/RiscOS/Sources/HAL/S3C2440/: Makefile  MkClean,fd7  MkRom,fd7  VersionNum
apache/RiscOS/Sources/HAL/S3C6410/: Makefile  VersionNum
apache/RiscOS/Sources/HAL/Tungsten/: MakeDebug,fe1  Makefile  MkRom,fd7  MkRomInst,fd7  VersionNum
apache/RiscOS/Sources/HWSupport/BatMgr/: Makefile
apache/RiscOS/Sources/HWSupport/CMOSUtils/: Makefile  VersionASM  VersionNum
apache/RiscOS/Sources/HWSupport/DualSerial/: !Mk,fd7  Makefile  VersionASM  VersionNum
apache/RiscOS/Sources/HWSupport/IIC/: VersionASM  VersionNum
apache/RiscOS/Sources/HWSupport/Portable75/: Makefile  MkRom,fd7  MkRomCX,fd7  VersionASM  VersionNum
apache/RiscOS/Sources/HWSupport/PortableA4/: MakePtbROM,feb  Makefile  Version
apache/RiscOS/Sources/HWSupport/SPIDriver/: !MkDebug,fd7  !MkRom,fd7  Makefile
apache/RiscOS/Sources/HWSupport/SerKeyMouse/: Makefile  VersionASM  VersionNum
apache/RiscOS/Sources/Lib/AcornNC/: Makefile
apache/RiscOS/Sources/Lib/HALLib/: !MkClean,fd7  !MkExport,fd7  !MkLibs,fd7  Makefile  VersionNum
apache/RiscOS/Sources/Lib/HTML/: Makefile
apache/RiscOS/Sources/Lib/HTMLLib/: !MkClean,fd7  !MkExport,fd7  !MkPrefix,fd7  Makefile  VersionNum
apache/RiscOS/Sources/Lib/MemLib/: Makefile  MkExport,fd7  VersionNum
apache/RiscOS/Sources/Lib/ModuleTask/: !MkClean,fd7  Makefile  VersionNum
apache/RiscOS/Sources/Lib/NBLib/: !MKDocs,fd7  !MkClean,fd7  !MkDebug,fd7  !MkExport,fd7  !MkHP,fd7  !MkMC,fd7  !MkMCD,fd7  !MkRom,fd7  Makefile
apache/RiscOS/Sources/Lib/PRISMLib/: !ReadMe  Doxyfile  Makefile  VersionNum
apache/RiscOS/Sources/Lib/mbedTLS/: !MkClean,fd7  !MkExport,fd7  Makefile  VersionNum
apache/RiscOS/Sources/Networking/CheckURL/: !MkClean,fd7  !MkExport,fd7  !MkRam,fd7  !MkRom,fd7  !MkTrace,fd7  Makefile  VersionNum
apache/RiscOS/Utilities/DummyEconet/: !MkInstall,fd7  Makefile  VersionASM  VersionNum
apache/RiscOS/Utilities/DummyParallel/: !MkClean,fd7  !MkInstall,fd7  !MkRam,fd7  !MkRom,fd7  Makefile  VersionASM  VersionNum
apache/RiscOS/Utilities/WinEdit/: !Mk,fd7  !MkClean,fd7  !MkInstall,fd7  Makefile  VersionNum
bsd/RiscOS/Apps/!CreateSEC/: !Boot,feb  !Help  !Run,feb  !Sprites22,ff9  CreateSEC,ffb  Desc  Messages  Templates,fec
bsd/RiscOS/Apps/!Routines/: !Boot,feb  !Help,feb  !Run,feb  !Sprites22,ff9  _Info
gpl/RiscOS/Apps/!gcc2_95_4/: !Help  !Run,feb  !Sprites,ff9  !Sprites22,ff9  Changes
gpl/RiscOS/Utilities/Perl/: !MkInstall,fd7  Makefile  VersionNum
gpl/Unix/Sources/Networking/cvsd/: AUTHORS  ChangeLog  FAQ  Makefile.am  Makefile.in  NEWS  README  TODO  cfg.c  cfg.h  cfgfile.c  cfgfile.h  config.h.in  configure  configure.ac  cvsd-buginfo.8.in  cvsd-buginfo.in  cvsd-buildroot.8.in  cvsd-buildroot.in  cvsd-passwd.8.in  cvsd-passwd.in  cvsd.8.in  cvsd.c  cvsd.conf-dist  cvsd.conf.5.in  cvsd.init.in  cvsd.init.redhat71.in  cvsd.spec  cvsd.spec.in  daemon.c  daemon.h  getinfos.c  getinfos.h  getopt_long.c  getopt_long.h  log.c  log.h  reslimit.c  reslimit.h  xmalloc.c  (+1 more)
gpl/Unix/Sources/Networking/cvsd/debian/: changelog  config  control  copyright  cvsd.bug.script  cvsd.init  docs  postinst  postrm  rules  templates
gpl/Unix/Sources/Networking/cvsd/debian/po/: cs.po  da.po  de.po  es.po  fr.po  ja.po  nl.po  pt.po  pt_BR.po  templates.pot  vi.po
mixed/RiscOS/Apps/!SharedLibs/: SOManager,ffa
(+6806 files in other folders)
